2026-02-19 aboutme 스타일 작업중

--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
 
             <div>
                 <div class="hero-name">
-                    <img src="images/diamond-black.svg" alt="" aria-hidden="true" />
+                    <svg width="20" height="20" viewBox="0 0 20 20">
+                        <path
+                            d="M20 10C15.3846 12.9692 12.9692 15.3846 10 20C7.03077 15.3846 4.61538 12.9692 0 10C4.61538 7.03077 7.03077 4.61538 10 0C12.9692 4.61538 15.3846 7.03077 20 10Z" />
+                    </svg>
+
                     <strong>HYE-IN KIM</strong>
                 </div>
 
@@ -183,17 +187,15 @@
         <section id="about-me" class="about-me">
             <div class="left-group">
                 <div class="left-group__top">
-                    <h2>About Me</h2><!-- before로 엄지척 달기 -->
-                    <div class="photo-box">
-                        <!-- after로 하트 달기 -->
+                    <div class="photobox">
                         <img src="images/profile.png" alt="프로필 사진">
                     </div>
+                    <h2>About<br>Me</h2>
                 </div>
 
                 <div class="left-group__bottom">
                     <p>Link</p>
                     <div class="links">
-                        <!-- before로 위에 줄 달기 -->
                         <a href="#" aria-label="노션 페이지 (새 창)">
                             <svg width="31" height="30" viewBox="0 0 31 30" aria-hidden="true">
                                 <path
@@ -210,8 +212,68 @@
                 </div>
             </div>
 
-            <div class="right-group">
+            <div class="right-group intro">
+                <article class="intro__con intro__con--who">
+                    <h3>Who am I?</h3>
+                    <div class="contents">
+                        <strong>김혜인</strong>
+                        <div class="textbox">
+                            <p>웹퍼블리셔</p>
+                            <p>
+                                과거 디자이너로 일하다가 코딩의 세계에 퐁당 빠져버림<br>
+                                서로 존중하는 수평적 인간관계 속에서 최고의 퍼포먼스를 발휘<br>
+                                변화를 추구하며 새로운 경험을 좋아함<br>
+                                외모만큼이나 동안과 같은 사고방식의 소유자
+                            </p>
+                            <div>
+                                <p><span>like</span>자유, 향상심, 팀워크, 정리정돈, 아름답거나 귀여운 것, 여행, 게임, 군것질</p>
+                                <p><span>dislike</span>편견, 강요, 비논리적 사고와 행동, 모기, 추위, 소음</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
 
+                <article class="intro__con intro__con--skills">
+                    <h3>Skills</h3>
+                    <div class="contents">
+                        <p>
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>SCSS</span>
+                            <br>
+                            <span>JavaScript</span>
+                            <span>jQuery</span>
+                            <span>React(퍼블리싱)</span>
+                            <br>
+                            <span>GitHub</span>
+                            <span>Swiper</span>
+                            <span>BootStrap</span>
+                            <span>GSAP</span>
+                        </p>
+                        <p>
+                            <span>Photoshop</span>
+                            <span>illustrator</span>
+                            <span>Figma</span>
+                        </p>
+                        <p>
+                            <span>Slack</span>
+                            <span>Notion</span>
+                            <span>Jira</span>
+                        </p>
+                    </div>
+                </article>
+
+                <article class="intro__con intro__con--history">
+                    <h3>History</h3>
+                    <div class="contents">
+                        <p>- WeDytor 사이트 리뉴얼 : 웹디자인, 라라벨 환경에서 퍼블리싱, 부트스트랩 활용 (2024.07 ~ 2024.12)</p>
+                        <p>- 계약직 근무 : 웹퍼블리싱, 사이트 유지관리 (2024.03 ~ 2024.05)</p>
+                        <p>- 스타트업 근무 : 웹디자인, 파이썬 환경 솔루션 구입하여 신설 사이트 퍼블리싱 (2023.01 ~ 2023.10)</p>
+                        <p>- 국가기간전략산업직종훈련 수료 : UI/UX 웹디자인 & 웹퍼블리셔 양성 과정 수료 (웹표준, 크로스브라우징, 반응형 등 교육 이수 / 2022.02.22 ~ 08.16)</p>
+                        <p>- 체험전시관 근무 : 전시 기획, 전시 디자인 총감리, 전시 설치물 및 관련 디자인물 제작 (5년)</p>
+                        <p>- 서울 4년제 대학 산업디자인 전공</p>
+                    </div>
+                </article>
             </div>
         </section>
 
