2026-02-28 about me 섹션 및 스크롤트리거 반응형 작업

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <!-- 키보드 포커싱 순서를 고려해 DOM 배치 -->
 
         <div class="left-group">
@@ -186,94 +186,97 @@
         <!-- about me 섹션 -->
         <section id="about-me" class="about-me">
             <div class="left-group">
-                <div class="left-group__top">
-                    <div class="photobox">
-                        <img src="images/profile.png" alt="프로필 사진">
-                    </div>
-                    <h2>About<br>Me</h2>
-                </div>
-
-                <div class="left-group__bottom">
-                    <p>Link</p>
-                    <div class="links">
-                        <a href="#" aria-label="노션 페이지 (새 창)">
-                            <svg width="31" height="30" viewBox="0 0 31 30" aria-hidden="true">
-                                <path
-                                    d="M7.69671 7.69687C8.41842 8.26406 8.68968 8.22187 10.0508 8.13281L22.8528 7.3875C23.124 7.3875 22.8964 7.125 22.8092 7.08281L20.678 5.59688C20.2711 5.29219 19.7286 4.94063 18.6872 5.02969L6.29202 5.90156C5.84155 5.94375 5.74952 6.16406 5.92874 6.3375L7.69186 7.69219L7.69671 7.69687ZM8.46686 10.5844V23.6203C8.46686 24.3187 8.83014 24.5812 9.64389 24.5391L23.715 23.7516C24.5287 23.7094 24.6208 23.2266 24.6208 22.6594V9.7125C24.6208 9.14531 24.3931 8.83594 23.8942 8.88281L9.18858 9.70781C8.64608 9.75 8.46686 10.0125 8.46686 10.5844ZM22.3539 11.2828C22.4459 11.6766 22.3539 12.0703 21.947 12.1172L21.2689 12.2484V21.8719C20.678 22.1766 20.1355 22.3547 19.685 22.3547C18.9584 22.3547 18.7792 22.1344 18.2367 21.4781L13.8047 14.7422V21.2578L15.2094 21.5625C15.2094 21.5625 15.2094 22.35 14.0759 22.35L10.9566 22.5234C10.8645 22.35 10.9566 21.9094 11.2714 21.825L12.0851 21.6047V12.9891L10.9566 12.9C10.8645 12.5063 11.0922 11.9391 11.7267 11.8922L15.0737 11.6719L19.6898 18.4969V12.4594L18.5128 12.3281C18.4208 11.8453 18.784 11.4984 19.2345 11.4516L22.3587 11.2734L22.3539 11.2828ZM5.25061 4.72031L18.1447 3.80156C19.7286 3.67031 20.1355 3.75938 21.1284 4.45781L25.2456 7.25625C25.9237 7.73906 26.1514 7.87031 26.1514 8.39531V23.7516C26.1514 24.7125 25.7881 25.2844 24.5239 25.3687L9.55186 26.2406C8.60249 26.2828 8.14718 26.1516 7.65311 25.5422L4.62093 21.7359C4.07843 21.0375 3.85077 20.5125 3.85077 19.8984V6.24844C3.85077 5.46094 4.21405 4.80469 5.25061 4.71563V4.72031Z" />
-                            </svg>
-                        </a>
-                        <a href="#" aria-label="깃허브 프로필 (새 창)">
-                            <svg width="30" height="30" viewBox="0 0 30 30" aria-hidden="true">
-                                <path
-                                    d="M11.1516 21.6281C11.1516 21.7219 11.0437 21.7969 10.9078 21.7969C10.7531 21.8109 10.6453 21.7359 10.6453 21.6281C10.6453 21.5344 10.7531 21.4594 10.8891 21.4594C11.0297 21.4453 11.1516 21.5203 11.1516 21.6281ZM9.69375 21.4172C9.66094 21.5109 9.75469 21.6187 9.89531 21.6469C10.0172 21.6937 10.1578 21.6469 10.1859 21.5531C10.2141 21.4594 10.125 21.3516 9.98438 21.3094C9.8625 21.2766 9.72656 21.3234 9.69375 21.4172ZM11.7656 21.3375C11.6297 21.3703 11.5359 21.4594 11.55 21.5672C11.5641 21.6609 11.6859 21.7219 11.8266 21.6891C11.9625 21.6563 12.0562 21.5672 12.0422 21.4734C12.0281 21.3844 11.9016 21.3234 11.7656 21.3375ZM14.85 3.375C8.34844 3.375 3.375 8.31094 3.375 14.8125C3.375 20.0109 6.64688 24.4594 11.3203 26.025C11.9203 26.1328 12.1312 25.7625 12.1312 25.4578C12.1312 25.1672 12.1172 23.5641 12.1172 22.5797C12.1172 22.5797 8.83594 23.2828 8.14688 21.1828C8.14688 21.1828 7.6125 19.8187 6.84375 19.4672C6.84375 19.4672 5.77031 18.7312 6.91875 18.7453C6.91875 18.7453 8.08594 18.8391 8.72812 19.9547C9.75469 21.7641 11.475 21.2438 12.1453 20.9344C12.2531 20.1844 12.5578 19.6641 12.8953 19.3547C10.275 19.0641 7.63125 18.6844 7.63125 14.175C7.63125 12.8859 7.9875 12.2391 8.7375 11.4141C8.61562 11.1094 8.21719 9.85313 8.85938 8.23125C9.83906 7.92656 12.0938 9.49688 12.0938 9.49688C13.0312 9.23438 14.0391 9.09844 15.0375 9.09844C16.0359 9.09844 17.0438 9.23438 17.9813 9.49688C17.9813 9.49688 20.2359 7.92188 21.2156 8.23125C21.8578 9.85781 21.4594 11.1094 21.3375 11.4141C22.0875 12.2438 22.5469 12.8906 22.5469 14.175C22.5469 18.6984 19.7859 19.0594 17.1656 19.3547C17.5969 19.725 17.9625 20.4281 17.9625 21.5297C17.9625 23.1094 17.9484 25.0641 17.9484 25.4484C17.9484 25.7531 18.1641 26.1234 18.7594 26.0156C23.4469 24.4594 26.625 20.0109 26.625 14.8125C26.625 8.31094 21.3516 3.375 14.85 3.375ZM7.93125 19.5422C7.87031 19.5891 7.88437 19.6969 7.96406 19.7859C8.03906 19.8609 8.14688 19.8938 8.20781 19.8328C8.26875 19.7859 8.25469 19.6781 8.175 19.5891C8.1 19.5141 7.99219 19.4812 7.93125 19.5422ZM7.425 19.1625C7.39219 19.2234 7.43906 19.2984 7.53281 19.3453C7.60781 19.3922 7.70156 19.3781 7.73438 19.3125C7.76719 19.2516 7.72031 19.1766 7.62656 19.1297C7.53281 19.1016 7.45781 19.1156 7.425 19.1625ZM8.94375 20.8312C8.86875 20.8922 8.89688 21.0328 9.00469 21.1219C9.1125 21.2297 9.24844 21.2438 9.30938 21.1688C9.37031 21.1078 9.34219 20.9672 9.24844 20.8781C9.14531 20.7703 9.00469 20.7562 8.94375 20.8312ZM8.40937 20.1422C8.33437 20.1891 8.33437 20.3109 8.40937 20.4188C8.48437 20.5266 8.61094 20.5734 8.67188 20.5266C8.74688 20.4656 8.74688 20.3438 8.67188 20.2359C8.60625 20.1281 8.48437 20.0813 8.40937 20.1422Z" />
-                            </svg>
-                        </a>
+                <h2>About<br>Me</h2>
+                <div class="contents">
+                    <img src="images/profile.png" alt="프로필 사진">
+                    <div class="bottom">
+                        <p>Link</p>
+                        <div class="links">
+                            <a href="#" aria-label="노션 페이지 (새 창)">
+                                <svg width="31" height="30" viewBox="0 0 31 30" aria-hidden="true">
+                                    <path
+                                        d="M7.69671 7.69687C8.41842 8.26406 8.68968 8.22187 10.0508 8.13281L22.8528 7.3875C23.124 7.3875 22.8964 7.125 22.8092 7.08281L20.678 5.59688C20.2711 5.29219 19.7286 4.94063 18.6872 5.02969L6.29202 5.90156C5.84155 5.94375 5.74952 6.16406 5.92874 6.3375L7.69186 7.69219L7.69671 7.69687ZM8.46686 10.5844V23.6203C8.46686 24.3187 8.83014 24.5812 9.64389 24.5391L23.715 23.7516C24.5287 23.7094 24.6208 23.2266 24.6208 22.6594V9.7125C24.6208 9.14531 24.3931 8.83594 23.8942 8.88281L9.18858 9.70781C8.64608 9.75 8.46686 10.0125 8.46686 10.5844ZM22.3539 11.2828C22.4459 11.6766 22.3539 12.0703 21.947 12.1172L21.2689 12.2484V21.8719C20.678 22.1766 20.1355 22.3547 19.685 22.3547C18.9584 22.3547 18.7792 22.1344 18.2367 21.4781L13.8047 14.7422V21.2578L15.2094 21.5625C15.2094 21.5625 15.2094 22.35 14.0759 22.35L10.9566 22.5234C10.8645 22.35 10.9566 21.9094 11.2714 21.825L12.0851 21.6047V12.9891L10.9566 12.9C10.8645 12.5063 11.0922 11.9391 11.7267 11.8922L15.0737 11.6719L19.6898 18.4969V12.4594L18.5128 12.3281C18.4208 11.8453 18.784 11.4984 19.2345 11.4516L22.3587 11.2734L22.3539 11.2828ZM5.25061 4.72031L18.1447 3.80156C19.7286 3.67031 20.1355 3.75938 21.1284 4.45781L25.2456 7.25625C25.9237 7.73906 26.1514 7.87031 26.1514 8.39531V23.7516C26.1514 24.7125 25.7881 25.2844 24.5239 25.3687L9.55186 26.2406C8.60249 26.2828 8.14718 26.1516 7.65311 25.5422L4.62093 21.7359C4.07843 21.0375 3.85077 20.5125 3.85077 19.8984V6.24844C3.85077 5.46094 4.21405 4.80469 5.25061 4.71563V4.72031Z" />
+                                </svg>
+                            </a>
+                            <a href="#" aria-label="깃허브 프로필 (새 창)">
+                                <svg width="30" height="30" viewBox="0 0 30 30" aria-hidden="true">
+                                    <path
+                                        d="M11.1516 21.6281C11.1516 21.7219 11.0437 21.7969 10.9078 21.7969C10.7531 21.8109 10.6453 21.7359 10.6453 21.6281C10.6453 21.5344 10.7531 21.4594 10.8891 21.4594C11.0297 21.4453 11.1516 21.5203 11.1516 21.6281ZM9.69375 21.4172C9.66094 21.5109 9.75469 21.6187 9.89531 21.6469C10.0172 21.6937 10.1578 21.6469 10.1859 21.5531C10.2141 21.4594 10.125 21.3516 9.98438 21.3094C9.8625 21.2766 9.72656 21.3234 9.69375 21.4172ZM11.7656 21.3375C11.6297 21.3703 11.5359 21.4594 11.55 21.5672C11.5641 21.6609 11.6859 21.7219 11.8266 21.6891C11.9625 21.6563 12.0562 21.5672 12.0422 21.4734C12.0281 21.3844 11.9016 21.3234 11.7656 21.3375ZM14.85 3.375C8.34844 3.375 3.375 8.31094 3.375 14.8125C3.375 20.0109 6.64688 24.4594 11.3203 26.025C11.9203 26.1328 12.1312 25.7625 12.1312 25.4578C12.1312 25.1672 12.1172 23.5641 12.1172 22.5797C12.1172 22.5797 8.83594 23.2828 8.14688 21.1828C8.14688 21.1828 7.6125 19.8187 6.84375 19.4672C6.84375 19.4672 5.77031 18.7312 6.91875 18.7453C6.91875 18.7453 8.08594 18.8391 8.72812 19.9547C9.75469 21.7641 11.475 21.2438 12.1453 20.9344C12.2531 20.1844 12.5578 19.6641 12.8953 19.3547C10.275 19.0641 7.63125 18.6844 7.63125 14.175C7.63125 12.8859 7.9875 12.2391 8.7375 11.4141C8.61562 11.1094 8.21719 9.85313 8.85938 8.23125C9.83906 7.92656 12.0938 9.49688 12.0938 9.49688C13.0312 9.23438 14.0391 9.09844 15.0375 9.09844C16.0359 9.09844 17.0438 9.23438 17.9813 9.49688C17.9813 9.49688 20.2359 7.92188 21.2156 8.23125C21.8578 9.85781 21.4594 11.1094 21.3375 11.4141C22.0875 12.2438 22.5469 12.8906 22.5469 14.175C22.5469 18.6984 19.7859 19.0594 17.1656 19.3547C17.5969 19.725 17.9625 20.4281 17.9625 21.5297C17.9625 23.1094 17.9484 25.0641 17.9484 25.4484C17.9484 25.7531 18.1641 26.1234 18.7594 26.0156C23.4469 24.4594 26.625 20.0109 26.625 14.8125C26.625 8.31094 21.3516 3.375 14.85 3.375ZM7.93125 19.5422C7.87031 19.5891 7.88437 19.6969 7.96406 19.7859C8.03906 19.8609 8.14688 19.8938 8.20781 19.8328C8.26875 19.7859 8.25469 19.6781 8.175 19.5891C8.1 19.5141 7.99219 19.4812 7.93125 19.5422ZM7.425 19.1625C7.39219 19.2234 7.43906 19.2984 7.53281 19.3453C7.60781 19.3922 7.70156 19.3781 7.73438 19.3125C7.76719 19.2516 7.72031 19.1766 7.62656 19.1297C7.53281 19.1016 7.45781 19.1156 7.425 19.1625ZM8.94375 20.8312C8.86875 20.8922 8.89688 21.0328 9.00469 21.1219C9.1125 21.2297 9.24844 21.2438 9.30938 21.1688C9.37031 21.1078 9.34219 20.9672 9.24844 20.8781C9.14531 20.7703 9.00469 20.7562 8.94375 20.8312ZM8.40937 20.1422C8.33437 20.1891 8.33437 20.3109 8.40937 20.4188C8.48437 20.5266 8.61094 20.5734 8.67188 20.5266C8.74688 20.4656 8.74688 20.3438 8.67188 20.2359C8.60625 20.1281 8.48437 20.0813 8.40937 20.1422Z" />
+                                </svg>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div class="right-group intro">
-                <article class="intro__con intro__con--who">
-                    <h3>Who am I?</h3>
-                    <div class="contents">
-                        <strong>김혜인</strong>
-                        <div class="textbox">
-                            <p>웹퍼블리셔</p>
-                            <p>
-                                과거 디자이너로 일하다가 코딩의 세계에 퐁당 빠져버림<br>
-                                서로 존중하는 수평적 인간관계 속에서 최고의 퍼포먼스를 발휘<br>
-                                변화를 추구하며 새로운 경험을 좋아함<br>
-                                외모만큼이나 동안과 같은 사고방식의 소유자
-                            </p>
-                            <div>
-                                <p><span>like</span>자유, 향상심, 팀워크, 정리정돈, 아름답거나 귀여운 것, 여행, 게임, 군것질</p>
-                                <p><span>dislike</span>편견, 강요, 비논리적 사고와 행동, 모기, 추위, 소음</p>
+            <div class="right-group">
+                <div class="pin-wrap">
+                    <div class="intro">
+                        <article class="intro__con intro__con--who">
+                            <h3>Who am I?</h3>
+                            <div class="contents">
+                                <strong>김혜인</strong>
+                                <div class="textbox">
+                                    <p>웹퍼블리셔</p>
+                                    <p>
+                                        과거 디자이너로 일하다가 코딩의 세계에 퐁당 빠져버림<br>
+                                        서로 존중하는 수평적 인간관계 속에서 최고의 퍼포먼스를 발휘<br>
+                                        변화를 추구하며 새로운 경험을 좋아함<br>
+                                        외모만큼이나 동안과 같은 사고방식의 소유자
+                                    </p>
+                                    <div>
+                                        <p><span>like</span>자유, 향상심, 팀워크, 정리정돈, 아름답거나 귀여운 것, 여행, 게임, 군것질</p>
+                                        <p><span>dislike</span>편견, 강요, 비논리적 사고와 행동, 모기, 추위, 소음</p>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                </article>
+                        </article>
 
-                <article class="intro__con intro__con--skills">
-                    <h3>Skills</h3>
-                    <div class="contents">
-                        <p>
-                            <span>HTML</span>
-                            <span>CSS</span>
-                            <span>SCSS</span>
-                            <br>
-                            <span>JavaScript</span>
-                            <span>jQuery</span>
-                            <span>React(퍼블리싱)</span>
-                            <br>
-                            <span>GitHub</span>
-                            <span>Swiper</span>
-                            <span>BootStrap</span>
-                            <span>GSAP</span>
-                        </p>
-                        <p>
-                            <span>Photoshop</span>
-                            <span>illustrator</span>
-                            <span>Figma</span>
-                        </p>
-                        <p>
-                            <span>Slack</span>
-                            <span>Notion</span>
-                            <span>Jira</span>
-                        </p>
-                    </div>
-                </article>
+                        <article class="intro__con intro__con--skills">
+                            <h3>Skills</h3>
+                            <div class="contents">
+                                <p>
+                                    <span>HTML</span>
+                                    <span>CSS</span>
+                                    <span>SCSS</span>
+                                    <br>
+                                    <span>JavaScript</span>
+                                    <span>jQuery</span>
+                                    <span>React(퍼블리싱)</span>
+                                    <br>
+                                    <span>GitHub</span>
+                                    <span>Swiper</span>
+                                    <span>BootStrap</span>
+                                    <span>GSAP</span>
+                                </p>
+                                <p>
+                                    <span>Photoshop</span>
+                                    <span>illustrator</span>
+                                    <span>Figma</span>
+                                </p>
+                                <p>
+                                    <span>Slack</span>
+                                    <span>Notion</span>
+                                    <span>Jira</span>
+                                </p>
+                            </div>
+                        </article>
 
-                <article class="intro__con intro__con--history">
-                    <h3>History</h3>
-                    <div class="contents">
-                        <p>- WeDytor 사이트 리뉴얼 : 웹디자인, 라라벨 환경에서 퍼블리싱, 부트스트랩 활용 (2024.07 ~ 2024.12)</p>
-                        <p>- 계약직 근무 : 웹퍼블리싱, 사이트 유지관리 (2024.03 ~ 2024.05)</p>
-                        <p>- 스타트업 근무 : 웹디자인, 파이썬 환경 솔루션 구입하여 신설 사이트 퍼블리싱 (2023.01 ~ 2023.10)</p>
-                        <p>- 국가기간전략산업직종훈련 수료 : UI/UX 웹디자인 & 웹퍼블리셔 양성 과정 수료 (웹표준, 크로스브라우징, 반응형 등 교육 이수 / 2022.02.22 ~ 08.16)</p>
-                        <p>- 체험전시관 근무 : 전시 기획, 전시 디자인 총감리, 전시 설치물 및 관련 디자인물 제작 (5년)</p>
-                        <p>- 서울 4년제 대학 산업디자인 전공</p>
+                        <article class="intro__con intro__con--history">
+                            <h3>History</h3>
+                            <div class="contents">
+                                <p>- WeDytor 사이트 리뉴얼 : 웹디자인, 라라벨 환경에서 퍼블리싱, 부트스트랩 활용 (2024.07 ~ 2024.12)</p>
+                                <p>- 계약직 근무 : 웹퍼블리싱, 사이트 유지관리 (2024.03 ~ 2024.05)</p>
+                                <p>- 스타트업 근무 : 웹디자인, 파이썬 환경 솔루션 구입하여 신설 사이트 퍼블리싱 (2023.01 ~ 2023.10)</p>
+                                <p>- 국가기간전략산업직종훈련 수료 : UI/UX 웹디자인 & 웹퍼블리셔 양성 과정 수료 (웹표준, 크로스브라우징, 반응형 등 교육 이수 /
+                                    2022.02.22 ~
+                                    08.16)</p>
+                                <p>- 체험전시관 근무 : 전시 기획, 전시 디자인 총감리, 전시 설치물 및 관련 디자인물 제작 (5년)</p>
+                                <p>- 서울 4년제 대학 산업디자인 전공</p>
+                            </div>
+                        </article>
                     </div>
-                </article>
+                </div>
             </div>
         </section>
 
